tests/pass/generics.us
struct List <T> {
    val:T,
    head:nil
}

fn main(a:str) -> List {
    List {
        val:"a",
        head:nil
    };
     List {
        val:i32,
        head:nil
    };
}