tests/fail/unary.us
fn main() -> bool {
    -"A";
}

 // Expect : Cannot use `-` operator on type `str`